Refactorisation de AppControleur pour enlever le pattern Singleton